docs/apache-airflow-providers-google/8.9.0/_sources/_api/airflow/providers/google/cloud/triggers/gcs/index.rst.txt
:py:mod:`airflow.providers.google.cloud.triggers.gcs`
=====================================================

.. py:module:: airflow.providers.google.cloud.triggers.gcs


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.triggers.gcs.GCSBlobTrigger




.. py:class:: GCSBlobTrigger(bucket, object_name, poke_interval, google_cloud_conn_id, hook_params)

   Bases: :py:obj:`airflow.triggers.base.BaseTrigger`

   A trigger that fires and it finds the requested file or folder present in the given bucket.

   :param bucket: the bucket in the google cloud storage where the objects are residing.
   :param object_name: the file or folder present in the bucket
   :param google_cloud_conn_id: reference to the Google Connection
   :param poke_interval: polling period in seconds to check for file/folder

   .. py:method:: serialize()

      Serializes GCSBlobTrigger arguments and classpath.


   .. py:method:: run()
      :async:

      Simple loop until the relevant file/folder is found.



